[package]
name = "duck-crawl"
version = "0.1.0"
edition = "2021"
description = "Grid-based first-person turn-based dungeon crawler on QuackEngine"

[dependencies]
quack-engine = { path = "../quack-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
